--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
 before_script:
   - npm prune
 after_success:
+  - npm run coverage
   - npm run coverage:upload
   - 'curl -Lo travis_after_all.py https://git.io/travis_after_all'
   - python travis_after_all.py
