ci: Only the lead build does coverage/releasing
Use the travis_after_all script properly to have only the lead build do
the coverage report and any necessary releasing. Also add Node version 6
to the Travis build list.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ cache:
 notifications:
   email: false
 node_js:
+  - '6'
   - '5'
   - '4'
   - iojs-v3
@@ -18,13 +19,21 @@ before_install:
   - npm i -g npm@^2.0.0
 before_script:
   - npm prune
+after_script:
+  - echo leader=$BUILD_LEADER status=$BUILD_AGGREGATE_STATUS
 after_success:
-  - npm run coverage
-  - npm run coverage:upload
   - 'curl -Lo travis_after_all.py https://git.io/travis_after_all'
   - python travis_after_all.py
   - 'export $(cat .to_export_back) &> /dev/null'
-  - npm run semantic-release
+  - |
+      if [ "$BUILD_LEADER" = "YES" -a "$BUILD_AGGREGATE_STATUS" = "others_succeeded" ]; then
+        echo "Checking coverage and release status."
+        npm run coverage
+        npm run coverage:upload
+        npm run semantic-release
+      else
+        echo "I'm a minion, no coverage or semantic-releasing for me."
+      fi
 branches:
   except:
     - "/^v\\d+\\.\\d+\\.\\d+$/"
