chore: move coveralls from package.json to build
Coveralls is only really necessary for the master build. So install that
specifically once the master is ready to do the coverage upload.

Also move the coverage run to the script section so tests don't have to
be run twice. Yeah, it'll put coverage reports on the minions but that
shouldn't be such a big deal.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ before_install:
   - npm i -g npm@^2.0.0
 before_script:
   - npm prune
+script:
+  - npm run coverage
 after_script:
   - echo leader=$BUILD_LEADER status=$BUILD_AGGREGATE_STATUS
 after_success:
@@ -28,11 +30,11 @@ after_success:
   - |
       if [ "$BUILD_LEADER" = "YES" -a "$BUILD_AGGREGATE_STATUS" = "others_succeeded" ]; then
         echo "Checking coverage and release status."
-        npm run coverage
+        npm install coveralls
         npm run coverage:upload
         npm run semantic-release
       else
-        echo "I'm a minion, no coverage or semantic-releasing for me."
+        echo "Either I'm a minion or the build failed. No coverage or semantic-releasing for me."
       fi
 branches:
   except:
